@@ -1,3 +1,9 @@
+2007-01-19  Marcus Meissner  <marcus@jet.franken.de>
+
+	From Victor Wagner <vbwagner@users.sourceforge.net>
+	* gphoto2/main.c: read hook script and
+	  filename from settings file.
+
 2006-11-25  Hubert Figuiere  <hub@figuiere.net>
 
 	* configure.ac: version post 2.3.0 because 2.3.0 has
